--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,12 @@
 # Environment variables for backend
 # Get these API keys from Google Cloud Console
-GOOGLE_AI_API_KEY=""
-GOOGLE_MAPS_API_KEY=""
+GOOGLE_AI_API_KEY="AIzaSyD2MsmZEKB_IGQPhZSNxCi5wJBiaS7gnS4"
+GOOGLE_MAPS_API_KEY="AIzaSyCBN1eADgkhJlUE4tSW-E8ucIeizOvCGYY"
+
+# Google Maps API Configuration
+GOOGLE_MAPS_REGION="US"
+GOOGLE_MAPS_LANGUAGE="en"
+GOOGLE_CLOUD_PROJECT_ID=""
 
 # Database (optional - for production use)
 DATABASE_URL="sqlite:///./trip_planner.db"
@@ -15,3 +20,6 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 APP_NAME="TripMigo AI"
 APP_VERSION="2.0.0"
 DEBUG=True
+
+# CORS Configuration
+ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000"
