updated env files

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # Environment variables for backend
 # Get these API keys from Google Cloud Console
-GOOGLE_AI_API_KEY="AIzaSyD2MsmZEKB_IGQPhZSNxCi5wJBiaS7gnS4"
-GOOGLE_MAPS_API_KEY="AIzaSyCBN1eADgkhJlUE4tSW-E8ucIeizOvCGYY"
+GOOGLE_AI_API_KEY=
+GOOGLE_MAPS_API_KEY=
 
 # Google Maps API Configuration
 GOOGLE_MAPS_REGION="US"
