--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -5,11 +5,11 @@ NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 
 # Google Maps API Key (will be fetched from backend)
 # For testing purposes, you can get a free API key from Google Cloud Console
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyCBN1eADgkhJlUE4tSW-E8ucIeizOvCGYY
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
 
 # Additional Google API Keys
-GOOGLE_API_KEY=AIzaSyCBN1eADgkhJlUE4tSW-E8ucIeizOvCGYY
-GOOGLE_AI_API_KEY=AIzaSyD2MsmZEKB_IGQPhZSNxCi5wJBiaS7gnS4
+GOOGLE_API_KEY=
+GOOGLE_AI_API_KEY=
 
 # Development Settings
 NODE_ENV=development
