--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,21 +1,6 @@
 {
-    "version": 2,
-    "name": "tripmigo-frontend",
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/next"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
-        }
-    ],
-    "env": {
-        "NEXT_PUBLIC_APP_NAME": "TripMigo",
-        "NEXT_PUBLIC_APP_VERSION": "1.0.0",
-        "NODE_ENV": "production"
-    }
+    "buildCommand": "npm run build",
+    "devCommand": "npm run dev",
+    "installCommand": "npm install",
+    "framework": "nextjs"
 }
