--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,5 @@
 {
     "framework": "nextjs",
-    "installCommand": "npm install --legacy-peer-deps"
+    "installCommand": "npm ci --legacy-peer-deps",
+    "buildCommand": "npm run build"
 }
