--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,4 @@
 {
     "framework": "nextjs",
-    "installCommand": "npm ci --legacy-peer-deps",
-    "buildCommand": "npm run build"
+    "installCommand": "npm install --legacy-peer-deps"
 }
