--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@types/node": "^22.18.13",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -65,11 +62,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.9.3",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "tw-animate-css": "1.3.3"
+    "@types/node": "^22.18.13",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "tw-animate-css": "1.3.3",
+    "typescript": "^5.9.3"
   }
 }
