Fix CORS, timeouts, and Railway configuration

--- a/backend/.env
+++ b/backend/.env
@@ -1,25 +1,17 @@
 # Environment variables for backend
 # Get these API keys from Google Cloud Console
-GOOGLE_AI_API_KEY=
-GOOGLE_MAPS_API_KEY=
-
-# Google Maps API Configuration
-GOOGLE_MAPS_REGION="US"
-GOOGLE_MAPS_LANGUAGE="en"
-GOOGLE_CLOUD_PROJECT_ID=""
+GOOGLE_AI_API_KEY="temp_key_for_testing"
+GOOGLE_MAPS_API_KEY="temp_key_for_testing"
 
 # Database (optional - for production use)
 DATABASE_URL="sqlite:///./trip_planner.db"
 
 # JWT Settings  
 JWT_SECRET_KEY="your-super-secret-jwt-key-change-in-production"
-JWT_ALGORITHM="HS256"
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Application Settings
-APP_NAME="TripMigo AI"
-APP_VERSION="2.0.0"
-DEBUG=True
+# Server Configuration
+PORT=8000
+ENVIRONMENT=development
 
 # CORS Configuration
-ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000"
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
