--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,15 +1,15 @@
-# Trip Planner Frontend Environment Variables
+# TripMigo Frontend Environment Variables
 
 # Backend API Configuration
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_API_BASE_URL=https://tripmigo-production.up.railway.app
 
 # Google Maps API Key (will be fetched from backend)
 # For testing purposes, you can get a free API key from Google Cloud Console
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
-# Additional Google API Keys
-GOOGLE_API_KEY=
-GOOGLE_AI_API_KEY=
+# Additional Google API Keys (optional)
+GOOGLE_API_KEY=your_google_maps_api_key_here
+GOOGLE_AI_API_KEY=your_google_ai_api_key_here
 
 # Development Settings
 NODE_ENV=development
