--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,9 @@
 # Environment variables for backend
 # Get these API keys from Google Cloud Console
-GOOGLE_AI_API_KEY="temp_key_for_testing"
-GOOGLE_MAPS_API_KEY="temp_key_for_testing"
+
+GOOGLE_AI_API_KEY="AIzaSyD2MsmZEKB_IGQPhZSNxCi5wJBiaS7gnS4"
+GOOGLE_MAPS_API_KEY="AIzaSyCBN1eADgkhJlUE4tSW-E8ucIeizOvCGYY"
+
 
 # Database (optional - for production use)
 DATABASE_URL="sqlite:///./trip_planner.db"
